# esp32c3_linux_demo

./: .gitignore  README.md
demo/demo/: CMakeLists.txt  sdkconfig  sdkconfig.old
demo/demo/components/BSP/: CMakeLists.txt
demo/demo/components/BSP/LED/: led.cpp  led.hpp
demo/demo/main/: CMakeLists.txt  main.cpp
demo/salve-esp32c3/: CMakeLists.txt  README.md
demo/salve-esp32c3/components/BSP/: CMakeLists.txt
demo/salve-esp32c3/components/BSP/i2c/: i2c_bus.cpp  i2c_bus.hpp
demo/salve-esp32c3/components/BSP/imu_sensor/: imu_sensor.hpp
demo/salve-esp32c3/components/BSP/mpu9250/: mpu9250.cpp  mpu9250.hpp
demo/salve-esp32c3/main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
